@@ -1,12 +1,10 @@
 DIST rake-0.7.3.gem 84480 RMD160 3def1145968a9ccc326ee904772878ce5e3e87b2 SHA1 d8e1f09f119b405679b9289cfad3723cddf18432 SHA256 4ed1dcade70490ee45fd7eba5e2a831675594d789e5fecb6da1cc525b3b991b5
-DIST rake-0.8.0.gem 89600 RMD160 4c893d7812602df7af7066742b2ad5458fe0b853 SHA1 965e173182d10465fc77e8db9c8c29dbde5e9eab SHA256 8b7c3eff140ee82d38c9a504e16f54876fd619296cdecb006748f01bec3b6a81
 DIST rake-0.8.1.gem 90112 RMD160 fbb00b09f577b71081fe01c7e318e54acaabf37c SHA1 349b0853d5a32012a8f282750c2f1abaf1169213 SHA256 7cd2e89c7736a7829f1fbc2a2ecbd7f911ee68d170ea31ad2b8277b943380227
-DIST rake-0.8.2.gem 99328 RMD160 f813ae1ec6cb5a39e93ca44ed8b459365f3adafd SHA1 bb6c24933b51686127323732ed56fe4507b1f1ee SHA256 6d932c26000dbbd95c3a059e11239e2a525dd9d1ef9a26168ef3919d1e23292f
 DIST rake-0.8.3.gem 100352 RMD160 8a81f35787c814b427177b88c07f6d2410b799a9 SHA1 fc3060c6c3ea3b804ef95576e41706b92fd51243 SHA256 c4792392fa21fd3b00b4909947cff70dcf327ebf07b86858a35b711f7391db9c
+DIST rake-0.8.4.gem 103936 RMD160 30e20fce53051afe2e7b5f03018b65a8ea8af9ab SHA1 3d0d287df69b38e4ba1efd567669df1d27809691 SHA256 ce856915b6b65a9f3fd5689a88f39010bbb8a7a68e685beaee4e1bd8687b7d65
 EBUILD rake-0.7.3.ebuild 702 RMD160 febf2c21b5e8f22cfba3c469254cfed0b6aecc5c SHA1 b35d9fc04ebb6967330c6b60e9a8afa1a48a1e8d SHA256 fb596911d8f2e30eeaf60d9c1ddfb0e7cf3ecbef910e640a818fe6e9ef6dc5b0
-EBUILD rake-0.8.0.ebuild 669 RMD160 4029556b39dd09a789068ee86fcac93c333d61aa SHA1 efefae0d22f4b8e076a590691ca0e3817685f2dc SHA256 43428ac4a4e47d8c80c5a76d76f7979ff5095a025ac24deed0362c0435f8e453
 EBUILD rake-0.8.1.ebuild 457 RMD160 0f6893f764d3ec740cecee6fd5bb7b491d5657af SHA1 4b0c60b3c3ba6037b6fc2d9a5eb5786a75bff46d SHA256 183ece33825fdcd5ff50a6ed78c6e682be053c77530d7195c2192b7e5b3b209d
-EBUILD rake-0.8.2.ebuild 456 RMD160 5838221835560b0379cd1e90570d6a27f1f218e6 SHA1 92c4dbb1c01400205bcd373b3342d32833a737af SHA256 b8ce69292e94bc5b50b47e03da9746f8b5017381bba6658b5a9b3b77b112a83f
 EBUILD rake-0.8.3.ebuild 441 RMD160 bf4cb43c5c070b2a20f9886f12e1a8990dad85d8 SHA1 c09bcd22e2ee21af49076d6e4dfd331709d3c598 SHA256 26b80c3153d5655bc2037935a03d35b99c68aca3edfcb51d7092e3fda2499c93
-MISC ChangeLog 8111 RMD160 d65b54a5a645e30e4f15a72570b70c73d84fe0d8 SHA1 3bf1c2eb4ae068ba59d862c1538be27d65d79ef8 SHA256 4ed5af3dff82917cf8b0aafd72c5e0ec9800d135baf072bf158ad6cff4f50992
+EBUILD rake-0.8.4.ebuild 440 RMD160 24aad2d2b837587cf76fd4e9457f3cc337db7a28 SHA1 64f54990f28a01262d5be4e588bc7c86e49019d7 SHA256 bcd38ca858319df1958e2b601e3131136757a2fb5e4c692115f8921e779e93f8
+MISC ChangeLog 8249 RMD160 e16a4bd46d8ee1811b82a2c0681854357566c12a SHA1 358c27f667ceb59100a74989b79302b81b2e51ec SHA256 1e09be1b8ddc8788d9195940492a185b898538c191bb0d75f6b60c887a77f0bc
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
