@@ -1,20 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/rake-0.8.0.ebuild,v 1.1 2008/01/11 14:41:39 rbrown Exp $
-
-EAPI="prefix"
-
-inherit ruby gems
-
-USE_RUBY="ruby18"
-DESCRIPTION="Make-like scripting in Ruby"
-HOMEPAGE="http://rake.rubyforge.org/"
-# The URL depends implicitly on the version, unfortunately. Even if you
-# change the filename on the end, it still downloads the same file.
-SRC_URI="http://gems.rubyforge.org/gems/${P}.gem"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-IUSE=""
-RESTRICT="test"
