@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/rake-0.8.2.ebuild,v 1.1 2008/09/18 17:21:27 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rake/rake-0.8.4.ebuild,v 1.1 2009/03/07 09:36:51 graaff Exp $
 
 EAPI="prefix"
 
@@ -13,4 +13,3 @@ LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
 IUSE=""
-RESTRICT="test"
